scenarios/calico-istio/istio/istio-system/kiali/kiali-dr.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali.istio-system.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 100ms
        # tcpKeepalive:
        #   time: 7200s
        #   interval: 75s
